Thu Apr 11 23:50:24 1996  Theodore Y. Ts'o  <tytso@dcl>

	* krb5.hin (krb5_x, krb5_xc): Fix wrapper macros so they don't
		try to dereference a function pointer as a data value.
		This doesn't work if you're using hpux cc, since functions
		are aligned on 2-byte boundaries, but data has to be
		accessed on 4-byte boundaries.  Accessing a function as a
		data value isn't ANSI C portable anyway.  :-)  Wrapper
		macros now take a function pointer, and check to see if
		the function pointer is non-NULL, instead of taking a
		(*funptr), and seeing if the function when treated as data
		object is non-NULL. 

Wed Apr 10 10:37:21 1996  Theodore Y. Ts'o  (tytso@dcl)

	* krb5.hin (krb5_validate_times): Add prototype of new function.

Thu Mar 28 19:55:04 1996  Richard Basch  <basch@lehman.com>

	* krb5.hin: Added ENCTYPE_DES3_CBC_RAW

Wed Mar 20 22:55:50 1996  Theodore Y. Ts'o  <tytso@dcl>

	* krb5.hin (krb5_pa_data): Change type of pa_type field in
		krb5_pa_data to be krb5_preauthtype, for consistency's
		sake.  Added prototype for krb5_copy_addr().  Change type
		of etype in krb5_etype_info_entry to be krb5_enctype, for
		consistency's sake.

Sat Feb 24 21:46:13 1996  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in (all-windows): hpux make doesn't grok $@, so I'm
	        told.  Use explicit target names for building errortable
	        include files.

Fri Feb 23 18:59:18 1996  Mark Eichin  <eichin@cygnus.com>

	* krb5.hin (krb5_x, krb5_xc): wrapper macros to test all function
	pointers before calling through them (abort if null.) Simplifies
	debugging on many platforms. Currently #if 1, but could be
	conditionalized once we're in "production".

Wed Feb 21 23:33:18 1996  Richard Basch  <basch@lehman.com>

	* Makefile.in: Do not install k5-int.h

Wed Jan 10 22:46:51 1996  Theodore Y. Ts'o  <tytso@dcl>

	* k5-int.h: Add fields for fcc_default_format and
	        scc_default_format in krb5_context structure.

Tue Jan  9 22:23:31 1996  Theodore Y. Ts'o  <tytso@dcl>
